--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -80,7 +80,39 @@
 				<category android:name="android.intent.category.APPLICATION" />
 			</intent-filter>
 		</activity>
-
+		
+		<activity android:name=".ActivityChooser" android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.APPLICATION"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".LoadBalancersActivity" android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.APPLICATION"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".ListLoadBalancersActivity" android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.APPLICATION"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".LoadBalancersActivity" android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.APPLICATION"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".ViewLoadBalancerActivity" android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.APPLICATION"/>
+            </intent-filter>
+        </activity>
+		
+       
 		<activity android:name=".Preferences" android:label="@string/preference_name" />
 		<activity android:name=".BackupServerActivity"></activity>
 		<activity android:name=".PasswordServerActivity"></activity>
