--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,8 @@
 	package="com.rackspacecloud.android" android:versionCode="1"
 	android:versionName="1.0">
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-	<application android:name="AndroidCloudApplication" android:icon="@drawable/rackspace60"
-		android:label="@string/app_name">
+	<application android:name="AndroidCloudApplication"
+		android:icon="@drawable/rackspace60" android:label="@string/app_name">
 		<activity android:name=".RackspaceCloudActivity"
 			android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 			<intent-filter>
@@ -20,8 +20,8 @@
 			</intent-filter>
 		</activity>
 
-		<activity android:name=".ListServersActivity" android:label="@string/app_name" 
-		android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+		<activity android:name=".ListServersActivity" android:label="@string/app_name"
+			android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
@@ -29,29 +29,29 @@
 		</activity>
 
 		<activity android:name=".AddServerActivity" android:label="@string/app_name"
-		 android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+			android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
 			</intent-filter>
 		</activity>
-		<activity android:name=".AddContainerActivity" android:label="@string/app_name" 
-		android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+		<activity android:name=".AddContainerActivity" android:label="@string/app_name"
+			android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
 			</intent-filter>
 		</activity>
 
-		<activity android:name=".ViewServerActivity" android:label="@string/app_name" 
-		android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+		<activity android:name=".ViewServerActivity" android:label="@string/app_name"
+			android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
 			</intent-filter>
 		</activity>
-		<activity android:name=".ViewServerActivity" android:label="@string/app_name" 
-		android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+		<activity android:name=".ViewServerActivity" android:label="@string/app_name"
+			android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
@@ -79,63 +79,72 @@
 			</intent-filter>
 		</activity>
 
-		<activity android:name=".EnableCDNActivity" android:label="@string/app_name" 
-		android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+		<activity android:name=".EnableCDNActivity" android:label="@string/app_name"
+			android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
 			</intent-filter>
 		</activity>
-		
-		<activity android:name=".ActivityChooser" android:label="@string/app_name" 
-		android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.APPLICATION"/>
-            </intent-filter>
-        </activity>
-        <activity android:name=".LoadBalancersActivity" android:label="@string/app_name" 
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.APPLICATION"/>
-            </intent-filter>
-        </activity>
-        <activity android:name=".ListLoadBalancersActivity" android:label="@string/app_name" 
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.APPLICATION"/>
-            </intent-filter>
-        </activity>
-        <activity android:name=".ViewLoadBalancerActivity" android:label="@string/app_name" 
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.APPLICATION"/>
-            </intent-filter>
-        </activity>
-		
-       
+
+		<activity android:name=".ActivityChooser" android:label="@string/app_name"
+			android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.APPLICATION" />
+			</intent-filter>
+		</activity>
+		<activity android:name=".LoadBalancersActivity"
+			android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.APPLICATION" />
+			</intent-filter>
+		</activity>
+		<activity android:name=".ListLoadBalancersActivity"
+			android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.APPLICATION" />
+			</intent-filter>
+		</activity>
+		<activity android:name=".ViewLoadBalancerActivity"
+			android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.APPLICATION" />
+			</intent-filter>
+		</activity>
+
+
 		<activity android:name=".Preferences" android:label="@string/preference_name" />
 		<activity android:name=".BackupServerActivity"></activity>
 		<activity android:name=".PasswordServerActivity"></activity>
 		<activity android:name=".PingServerActivity"></activity>
-		<activity android:name=".ListAccountsActivity" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+		<activity android:name=".ListAccountsActivity"
+			android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
 
-		<activity android:name=".AddAccountActivity" android:theme="@android:style/Theme.NoTitleBar.Fullscreen"></activity>
-		<activity android:name=".ContactActivity" android:theme="@android:style/Theme.NoTitleBar.Fullscreen"></activity>
-		<activity android:name=".CreatePasswordActivity" android:theme="@android:style/Theme.NoTitleBar.Fullscreen"></activity>
-		<activity android:name=".AddFileActivity" android:theme="@android:style/Theme.NoTitleBar.Fullscreen"></activity>
-		<activity android:name=".ServerErrorActivity" android:theme="@android:style/Theme.Dialog" android:noHistory="true"></activity>
+		<activity android:name=".AddAccountActivity"
+			android:theme="@android:style/Theme.NoTitleBar.Fullscreen"></activity>
+		<activity android:name=".ContactActivity"
+			android:theme="@android:style/Theme.NoTitleBar.Fullscreen"></activity>
+		<activity android:name=".CreatePasswordActivity"
+			android:theme="@android:style/Theme.NoTitleBar.Fullscreen"></activity>
+		<activity android:name=".AddFileActivity"
+			android:theme="@android:style/Theme.NoTitleBar.Fullscreen"></activity>
+		<activity android:name=".ServerErrorActivity" android:theme="@android:style/Theme.Dialog"
+			android:noHistory="true"></activity>
 		<activity android:name=".ErrorDetailsActivity"></activity>
-		<activity android:name=".ConfirmResizeActivity" android:theme="@android:style/Theme.Dialog"></activity>
-		
+		<activity android:name=".ConfirmResizeActivity"
+			android:theme="@android:style/Theme.Dialog"></activity>
+		<activity android:name=".AddLoadBalancerActivity"
+			android:theme="@android:style/Theme.NoTitleBar.Fullscreen"></activity>
+
 
 
 	</application>
