--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
 	<application android:name="AndroidCloudApplication"
 		android:icon="@drawable/rackspace60" android:label="@string/app_name">
 		<activity android:name=".RackspaceCloudActivity"
-			android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
@@ -20,96 +20,89 @@
 			</intent-filter>
 		</activity>
 
-		<activity android:name=".ListServersActivity" android:label="@string/app_name"
-			android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+		<activity android:name=".ListServersActivity" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
 			</intent-filter>
 		</activity>
 
-		<activity android:name=".AddServerActivity" android:label="@string/app_name"
-			android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+		<activity android:name=".AddServerActivity" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
 			</intent-filter>
 		</activity>
-		<activity android:name=".AddContainerActivity" android:label="@string/app_name"
-			android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+		<activity android:name=".AddContainerActivity" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
 			</intent-filter>
 		</activity>
 
-		<activity android:name=".ViewServerActivity" android:label="@string/app_name"
-			android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+		<activity android:name=".ViewServerActivity" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
 			</intent-filter>
 		</activity>
-		<activity android:name=".ViewServerActivity" android:label="@string/app_name"
-			android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+		<activity android:name=".ViewServerActivity" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
 			</intent-filter>
 		</activity>
 		<activity android:name=".ContainerObjectsActivity"
-			android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
 			</intent-filter>
 		</activity>
 		<activity android:name=".ListContainerActivity"
-			android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
 			</intent-filter>
 		</activity>
 		<activity android:name=".ContainerObjectDetails"
-			android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
 			</intent-filter>
 		</activity>
 
-		<activity android:name=".EnableCDNActivity" android:label="@string/app_name"
-			android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+		<activity android:name=".EnableCDNActivity" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
 			</intent-filter>
 		</activity>
 
-		<activity android:name=".ActivityChooser" android:label="@string/app_name"
-			android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+		<activity android:name=".ActivityChooser" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
 			</intent-filter>
 		</activity>
 		<activity android:name=".LoadBalancersActivity"
-			android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
 			</intent-filter>
 		</activity>
 		<activity android:name=".ListLoadBalancersActivity"
-			android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
 			</intent-filter>
 		</activity>
 		<activity android:name=".ViewLoadBalancerActivity"
-			android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.APPLICATION" />
@@ -121,31 +114,25 @@
 		<activity android:name=".BackupServerActivity"></activity>
 		<activity android:name=".PasswordServerActivity"></activity>
 		<activity android:name=".PingServerActivity"></activity>
-		<activity android:name=".ListAccountsActivity"
-			android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+		<activity android:name=".ListAccountsActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
 
-		<activity android:name=".AddAccountActivity"
-			android:theme="@android:style/Theme.NoTitleBar.Fullscreen"></activity>
-		<activity android:name=".ContactActivity"
-			android:theme="@android:style/Theme.NoTitleBar.Fullscreen"></activity>
-		<activity android:name=".CreatePasswordActivity"
-			android:theme="@android:style/Theme.NoTitleBar.Fullscreen"></activity>
-		<activity android:name=".AddFileActivity"
-			android:theme="@android:style/Theme.NoTitleBar.Fullscreen"></activity>
+		<activity android:name=".AddAccountActivity"></activity>
+		<activity android:name=".ContactActivity"></activity>
+		<activity android:name=".CreatePasswordActivity"></activity>
+		<activity android:name=".AddFileActivity"></activity>
 		<activity android:name=".ServerErrorActivity" android:theme="@android:style/Theme.Dialog"
 			android:noHistory="true"></activity>
 		<activity android:name=".ErrorDetailsActivity"></activity>
 		<activity android:name=".ConfirmResizeActivity"
 			android:theme="@android:style/Theme.Dialog"></activity>
-		<activity android:name=".AddLoadBalancerActivity"
-			android:theme="@android:style/Theme.NoTitleBar.Fullscreen"></activity>
+		<activity android:name=".AddLoadBalancerActivity"></activity>
 		<activity android:name=".AddNodesActivity"></activity>
-		<activity android:name=".AddNodeActivity" android:theme="@android:style/Theme.Dialog"></activity>
+		<activity android:name=".AddNodeActivity"></activity>
 		<activity android:name=".EditNodeActivity" android:theme="@android:style/Theme.Dialog"></activity>
 		<activity android:name=".EditNodesActivity"></activity>
 		<activity android:name=".EditLoadBalancerActivity"></activity>
