--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,15 +3,8 @@
 	package="com.rackspacecloud.android" android:versionCode="1"
 	android:versionName="1.0">
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-	<application android:name="AndroidCloudApplication"
+	<application android:name=".AndroidCloudApplication"
 		android:icon="@drawable/rackspace60" android:label="@string/app_name">
-		<activity android:name=".RackspaceCloudActivity"
-			android:label="@string/app_name">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.APPLICATION" />
-			</intent-filter>
-		</activity>
 
 		<activity android:name=".TabViewActivity" android:label="@string/app_name">
 			<intent-filter>
