--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -131,6 +131,7 @@
 		<activity android:name=".EditLoadBalancerActivity"></activity>
 		<activity android:name=".AddMoreNodesActivity"></activity>
 		<activity android:name=".AddExternalNodeActivity"></activity>
+		<activity android:name=".SharedVipActivity"></activity>
 
 
 
