--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 	<application android:name="AndroidCloudApplication" android:icon="@drawable/rackspace60"
-		android:label="@string/app_name">
+		android:label="@string/app_name" android:debuggable="true">
 		<activity android:name=".RackspaceCloudActivity"
 			android:label="@string/app_name">
 			<intent-filter>
