--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.rackspacecloud.android" android:versionCode="1"
-	android:versionName="1.0">
+	package="com.rackspacecloud.android" android:versionCode="2"
+	android:versionName="1.2">
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 	<application android:name="AndroidCloudApplication" android:icon="@drawable/rackspace60"
-		android:label="@string/app_name" android:debuggable="true">
+		android:label="@string/app_name">
 		<activity android:name=".RackspaceCloudActivity"
 			android:label="@string/app_name">
 			<intent-filter>
